Error Mitigation/MagiCoder/Data/javax_swing_border/javax_swing_borderOutputResult.txt
Sample: AbstractBorder_1
----------------------------------------------------------------
output:
./Data/javax_swing_border/javaFiles/AbstractBorder_1.java:13: error: cannot find symbol
        Insets insets = border.getBorderInsets(new JComponent());
                                                   ^
  symbol:   class JComponent
  location: class AbstractBorder_1
1 error


================================================================

Sample: AbstractBorder_2
----------------------------------------------------------------
stdout:
false

================================================================

Sample: AbstractBorder_3
----------------------------------------------------------------
stderr:
Exception in thread "main" java.awt.HeadlessException: 
No X11 DISPLAY variable was set,
but this program performed an operation which requires it.
	at java.desktop/java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:164)
	at java.desktop/java.awt.Window.<init>(Window.java:553)
	at java.desktop/java.awt.Frame.<init>(Frame.java:428)
	at java.desktop/java.awt.Frame.<init>(Frame.java:393)
	at java.desktop/javax.swing.JFrame.<init>(JFrame.java:180)
	at AbstractBorder_3.main(AbstractBorder_3.java:7)

================================================================

Sample: BevelBorder_3
----------------------------------------------------------------
output:
./Data/javax_swing_border/javaFiles/BevelBorder_3.java:5: error: incompatible types: int cannot be converted to BevelBorder
        BevelBorder bevelBorder = BevelBorder.RAISED;
                                             ^
1 error


================================================================

Sample: BevelBorder_14
----------------------------------------------------------------
stdout:
Is border opaque? true

================================================================

Sample: BevelBorder_15
----------------------------------------------------------------
stderr:
Exception in thread "main" java.awt.HeadlessException: 
No X11 DISPLAY variable was set,
but this program performed an operation which requires it.
	at java.desktop/java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:164)
	at java.desktop/java.awt.Window.<init>(Window.java:553)
	at java.desktop/java.awt.Frame.<init>(Frame.java:428)
	at java.desktop/java.awt.Frame.<init>(Frame.java:393)
	at java.desktop/javax.swing.JFrame.<init>(JFrame.java:180)
	at BevelBorder_15.main(BevelBorder_15.java:7)

================================================================

Sample: CompoundBorder_4
----------------------------------------------------------------
stdout:
Is the compound border opaque? false

================================================================

Sample: CompoundBorder_5
----------------------------------------------------------------
stderr:
Exception in thread "main" java.awt.HeadlessException: 
No X11 DISPLAY variable was set,
but this program performed an operation which requires it.
	at java.desktop/java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:164)
	at java.desktop/java.awt.Window.<init>(Window.java:553)
	at java.desktop/java.awt.Frame.<init>(Frame.java:428)
	at java.desktop/javax.swing.JFrame.<init>(JFrame.java:224)
	at CompoundBorder_5.main(CompoundBorder_5.java:7)

================================================================

Sample: EmptyBorder_4
----------------------------------------------------------------
stdout:
Is border opaque? false

================================================================

Sample: EmptyBorder_5
----------------------------------------------------------------
stderr:
Exception in thread "main" java.awt.HeadlessException: 
No X11 DISPLAY variable was set,
but this program performed an operation which requires it.
	at java.desktop/java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:164)
	at java.desktop/java.awt.Window.<init>(Window.java:553)
	at java.desktop/java.awt.Frame.<init>(Frame.java:428)
	at java.desktop/javax.swing.JFrame.<init>(JFrame.java:224)
	at EmptyBorder_5.main(EmptyBorder_5.java:8)

================================================================

Sample: EtchedBorder_5
----------------------------------------------------------------
stdout:
Etch Type: 1

================================================================

Sample: EtchedBorder_7
----------------------------------------------------------------
stdout:
Highlight Color: null

================================================================

Sample: EtchedBorder_9
----------------------------------------------------------------
stdout:
Shadow Color: null

================================================================

Sample: EtchedBorder_11
----------------------------------------------------------------
stdout:
Is border opaque: true

================================================================

Sample: EtchedBorder_12
----------------------------------------------------------------
stderr:
Exception in thread "main" java.awt.HeadlessException: 
No X11 DISPLAY variable was set,
but this program performed an operation which requires it.
	at java.desktop/java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:164)
	at java.desktop/java.awt.Window.<init>(Window.java:553)
	at java.desktop/java.awt.Frame.<init>(Frame.java:428)
	at java.desktop/java.awt.Frame.<init>(Frame.java:393)
	at java.desktop/javax.swing.JFrame.<init>(JFrame.java:180)
	at EtchedBorder_12.main(EtchedBorder_12.java:7)

================================================================

Sample: EtchedBorder_15
----------------------------------------------------------------
stderr:
Exception in thread "main" java.awt.HeadlessException: 
No X11 DISPLAY variable was set,
but this program performed an operation which requires it.
	at java.desktop/java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:164)
	at java.desktop/java.awt.Window.<init>(Window.java:553)
	at java.desktop/java.awt.Frame.<init>(Frame.java:428)
	at java.desktop/java.awt.Frame.<init>(Frame.java:393)
	at java.desktop/javax.swing.JFrame.<init>(JFrame.java:180)
	at EtchedBorder_15.main(EtchedBorder_15.java:7)

================================================================

Sample: EtchedBorder_17
----------------------------------------------------------------
stdout:
Is border opaque: true

================================================================

Sample: EtchedBorder_20
----------------------------------------------------------------
stderr:
Exception in thread "main" java.awt.HeadlessException: 
No X11 DISPLAY variable was set,
but this program performed an operation which requires it.
	at java.desktop/java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:164)
	at java.desktop/java.awt.Window.<init>(Window.java:553)
	at java.desktop/java.awt.Frame.<init>(Frame.java:428)
	at java.desktop/java.awt.Frame.<init>(Frame.java:393)
	at java.desktop/javax.swing.JFrame.<init>(JFrame.java:180)
	at EtchedBorder_20.main(EtchedBorder_20.java:7)

================================================================

Sample: SoftBevelBorder_5
----------------------------------------------------------------
stderr:
Exception in thread "main" java.awt.HeadlessException: 
No X11 DISPLAY variable was set,
but this program performed an operation which requires it.
	at java.desktop/java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:164)
	at java.desktop/java.awt.Window.<init>(Window.java:553)
	at java.desktop/java.awt.Frame.<init>(Frame.java:428)
	at java.desktop/java.awt.Frame.<init>(Frame.java:393)
	at java.desktop/javax.swing.JFrame.<init>(JFrame.java:180)
	at SoftBevelBorder_5.main(SoftBevelBorder_5.java:7)

================================================================

Sample: TitledBorder_2
----------------------------------------------------------------
stdout:
javax.swing.plaf.BorderUIResource$LineBorderUIResource@40e6dfe1

================================================================

Sample: TitledBorder_3
----------------------------------------------------------------
output:
./Data/javax_swing_border/javaFiles/TitledBorder_3.java:5: error: cannot find symbol
        TitledBorder titledBorder = BorderFactory.createTitledBorder("Title");
                                    ^
  symbol:   variable BorderFactory
  location: class TitledBorder_3
1 error


================================================================

Sample: TitledBorder_4
----------------------------------------------------------------
output:
./Data/javax_swing_border/javaFiles/TitledBorder_4.java:5: error: cannot find symbol
        TitledBorder titledBorder = BorderFactory.createTitledBorder("Title");
                                    ^
  symbol:   variable BorderFactory
  location: class TitledBorder_4
1 error


================================================================

Sample: TitledBorder_5
----------------------------------------------------------------
output:
./Data/javax_swing_border/javaFiles/TitledBorder_5.java:5: error: cannot find symbol
        TitledBorder titledBorder = BorderFactory.createTitledBorder("Title");
                                    ^
  symbol:   variable BorderFactory
  location: class TitledBorder_5
1 error


================================================================

